rusqlite_migration/src/tests/snapshots/rusqdoltlite_migration__tests__core__all_valid_down_test.snap
---
source: rusqdoltlite_migration/src/tests/core.rs
expression: migrations
snapshot_kind: text
---
Migrations {
    ms: [
        M {
            up: "CREATE TABLE m1(a, b); CREATE TABLE m2(a, b, c);",
            up_hook: None,
            down: Some(
                "DROP TABLE m1; DROP TABLE m2;",
            ),
            down_hook: None,
            foreign_key_check: false,
            comment: None,
        },
        M {
            up: "CREATE TABLE t1(a, b);",
            up_hook: None,
            down: Some(
                "DROP TABLE t1;",
            ),
            down_hook: None,
            foreign_key_check: false,
            comment: None,
        },
        M {
            up: "ALTER TABLE t1 RENAME COLUMN b TO c;",
            up_hook: None,
            down: Some(
                "ALTER TABLE t1 RENAME COLUMN c TO b;",
            ),
            down_hook: None,
            foreign_key_check: false,
            comment: None,
        },
        M {
            up: "CREATE TABLE t2(b);",
            up_hook: None,
            down: Some(
                "DROP TABLE t2;",
            ),
            down_hook: None,
            foreign_key_check: false,
            comment: None,
        },
        M {
            up: "ALTER TABLE t2 ADD COLUMN a;",
            up_hook: None,
            down: Some(
                "ALTER TABLE t2 DROP COLUMN a;",
            ),
            down_hook: None,
            foreign_key_check: false,
            comment: None,
        },
        M {
            up: "\n        CREATE TABLE fk1(a PRIMARY KEY);\n        CREATE TABLE fk2(\n            a,\n            FOREIGN KEY(a) REFERENCES fk1(a)\n        );\n        INSERT INTO fk1 (a) VALUES ('foo');\n        INSERT INTO fk2 (a) VALUES ('foo');\n    ",
            up_hook: None,
            down: Some(
                "DELETE FROM fk2; DELETE FROM fk1; DROP TABLE fk2; DROP TABLE fk1;",
            ),
            down_hook: None,
            foreign_key_check: true,
            comment: None,
        },
    ],
}
