rusqlite_migration/src/tests/snapshots/rusqdoltlite_migration__tests__core__migration_hook_debug.snap
---
source: rusqdoltlite_migration/src/tests/core.rs
expression: m
snapshot_kind: text
---
M {
    up: "",
    up_hook: Some(
        MigrationHook(<closure>),
    ),
    down: None,
    down_hook: None,
    foreign_key_check: false,
    comment: None,
}
