rusqlite_migration/src/tests/snapshots/rusqdoltlite_migration__tests__core__read_only_db_all_valid.snap
---
source: rusqdoltlite_migration/src/tests/core.rs
expression: e
snapshot_kind: text
---
Err(
    RusqDoltLiteError {
        query: "CREATE TABLE m1(a, b); CREATE TABLE m2(a, b, c);",
        err: SqliteFailure(
            Error {
                code: ReadOnly,
                extended_code: 8,
            },
            Some(
                "attempt to write a readonly database",
            ),
        ),
    },
)
