rusqlite_migration/src/tests/snapshots/rusqdoltlite_migration__tests__core__user_version_error.snap
---
source: rusqdoltlite_migration/src/tests/core.rs
expression: e
snapshot_kind: text
---
Err(
    RusqDoltLiteError {
        query: "PRAGMA user_version = 1; -- Approximate query",
        err: SqliteFailure(
            Error {
                code: ReadOnly,
                extended_code: 8,
            },
            Some(
                "attempt to write a readonly database",
            ),
        ),
    },
)
